Version 5.2.0 - 2019-05-06
* Bug fixes (see mercurial logs for details)
* Remove starting wildcard when searching on codes and numbers
* Include all identifier from python-stdnum
* Use country code as local prefix to parse phone numbers

Version 5.0.0 - 2018-10-01
* Bug fixes (see mercurial logs for details)
* Support attention party in address format
* Add party name on address
* Remove support for Python 2.7

Version 4.8.0 - 2018-04-23
* Bug fixes (see mercurial logs for details)
* Add Erase Party wizard
* Search party also by contact mechanisms
* Add contact_mechanism_get
* Add name to contact mechanism
* Improve distinction of address record name

Version 4.6.0 - 2017-10-30
* Bug fixes (see mercurial logs for details)

Version 4.4.0 - 2017-05-01
* Bug fixes (see mercurial logs for details)
* Use static selection for identifier type

Version 4.2.0 - 2016-11-28
* Bug fixes (see mercurial logs for details)
* Add format to phone numbers
* Rename VAT Code into Tax Identifier
* Add sequence order on Identifier
* Add Replace Party wizard
* Remove streetbis from Address
* Add address format per country and language
* Restrict subdivision address to first level

Version 4.0.0 - 2016-05-02
* Bug fixes (see mercurial logs for details)
* Add Python3 support
* Remove required on Party name

Version 3.8.0 - 2015-11-02
* Bug fixes (see mercurial logs for details)
* Change Party.lang into Property
* Add a list of identifier to party

Version 3.6.0 - 2015-04-20
* Bug fixes (see mercurial logs for details)
* Add support for PyPy
* compact vat number
* value Function fields don't set the value anymore

Version 3.4.0 - 2014-10-20
* Bug fixes (see mercurial logs for details)
* Add autocomplete on zip and city

Version 3.2.0 - 2014-04-21
* Bug fixes (see mercurial logs for details)

Version 3.0.0 - 2013-10-21
* Bug fixes (see mercurial logs for details)

Version 2.8.0 - 2013-04-22
* Bug fixes (see mercurial logs for details)
* Add url widget to contact mechanism list view
