@@ -2,6 +2,9 @@
 <!-- This file is part of Tryton.  The COPYRIGHT file at the top level of
 this repository contains the full copyright notices and license terms. -->
 <form col="6">
+    <label name="party"/>
+    <field name="party" colspan="3"/>
+    <newline/>
     <label name="type"/>
     <field name="type"/>
     <group col="2" colspan="2" id="value">
@@ -23,9 +26,9 @@ this repository contains the full copyright notices and license terms. -->
         <!-- Add here some checkboxes ! -->
     </group>
     <label name="name"/>
-    <field name="name" colspan="2"/>
-    <label name="party"/>
-    <field name="party" colspan="2"/>
+    <field name="name" colspan="3"/>
+    <label name="sequence"/>
+    <field name="sequence"/>
     <separator name="comment" colspan="6"/>
     <field name="comment" colspan="6"/>
 </form>
